--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 Simple ruby script to help practice scales (e.g. blues or major
 pentatonic) on a diatonic richter harp for various keys.
 
-Its operation modes are 'listen' and 'quiz'. 
+Its operation modes are 'practice' and 'quiz'. 
 
 The screenshot below is from mode 'quiz': The program has played five
 notes intially and now challenges me to play them back. I just played
@@ -30,8 +30,6 @@ note.
     ./harp_scale_trainer.rb
 
   
-  Modes of operation are: quiz, calibrate and listen.
-
   First you will need to calibrate the program for at least one key by
   playing your own harp as requested; this needs to be done once only.
 
