--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 
 * Harp Scale Trainer
 
-[[images/harmonica.png]]
+[[images/harmonica.jpg]]
 
 Simple ruby script to help practice scales (e.g. blues or major pentatonic) on a
 diatonic harmonica for various keys.
