--- a/README.org
+++ b/README.org
@@ -5,7 +5,7 @@
   [[images/harmonicas.jpg]]
 
   Simple ruby script to help practice scales (e.g. blues or major pentatonic) on a
-  (datonic) richter or chromatic harmonica for various keys.
+  (diatonic) richter or chromatic harmonica for various keys.
 
   Its main operation modes are 'listen' and 'quiz'.
   
@@ -62,3 +62,12 @@
   For MS Windows, version 11, you may use the latest windows-Subsystem for
   Linux wslg, which supports sound through the remote desktop protocol.
 
+* Making the screenshots
+
+  With these commandlines:
+
+  ./harp_scale_trainer listen richter c blues --screenshot
+
+  ./harp_scale_trainer quiz 5 richter c blues --screenshot
+
+  
